// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest can mount 1`] = `

<div id="autosuggest"
     data-server-rendered="true"
>
  <input name="q"
         type="text"
         maxlength="256"
         autocomplete="off"
         aria-autosuggest="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="true"
         id="autosuggest__input"
         initialvalue
         onclick="function onClick() {}"
         oninputchange="function onInputChange(text) {}"
         placeholder="Type 'G'"
         value
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>

`;

exports[`Autosuggest can render suggestions 1`] = `

<div id="autosuggest"
     data-server-rendered="true"
>
  <input name="q"
         type="text"
         maxlength="256"
         autocomplete="off"
         aria-autosuggest="list"
         aria-owns="autosuggest__results"
         aria-activedescendant
         aria-haspopup="true"
         id="autosuggest__input"
         initialvalue
         onclick="function onClick() {}"
         oninputchange="function onInputChange(text) {}"
         placeholder="Type 'G'"
         value="G"
         class="form-control autosuggest__input-open"
  >
  <div class="autosuggest__results-container">
    <!---->
  </div>
</div>

`;
